--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 								<h3 class="text-color-secondary font-weight-bold text-transform-none line-height-2 text-10 mb-4 appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="1200">
 									OUR PACKAGES<br> 
 								</h3>
-								<p class=" mb-4 appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="1400"><p class="text-primary " style="display: inline-block">At ElStar Hostel, </p>we offer carefully designed stay packages to suit every traveler. Each option provides comfort,flexibility, and a chance to enjoy the welcoming atmosphere of our hostel.</p>
+								<p class="appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="1400"><p class="text-primary mb-1" style="display: inline-block">At ElStar Hostel, </p>we offer carefully designed stay packages to suit every traveler. Each option provides comfort,flexibility, and a chance to enjoy the welcoming atmosphere of our hostel.</p>
 								<ul>
 										<li>7-Night Package: Ideal for a short getaway, giving you time to relax and experience the cozy ambiance of ElStar.</li>
 										<li>10-Night Package: Perfect for those who want a longer stay, allowing you to settle in and fully enjoy the hostel’s vibrant environment.</li>
