--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
 								<div class="owl-stage-outer"><div class="owl-stage" style="transform: translate3d(0px, 0px, 0px); transition: 0.25s; width: 1852px;"><div class="owl-item active" style="width: 926px;"><div>
 										<div class="testimonial testimonial-style-2 testimonial-with-quotes mb-0">
 											<div class="testimonial-author">
-												<img src="img/clients/client-1.jpg" class="img-fluid rounded-circle" alt="">
+												<img src="img/pr7.png" class="img-fluid rounded-circle" alt="">
 											</div>
 											<blockquote>
 												<p class="mb-0">“Amazing stay in Aourir — surf lessons were fun and patient, the rooftop yoga at sunrise was unforgettable, and the tagine dinners felt like home. Highly recommend for a relaxed, active trip!”</p>
@@ -259,7 +259,7 @@
 									</div></div><div class="owl-item" style="width: 926px;"><div>
 										<div class="testimonial testimonial-style-2 testimonial-with-quotes mb-0">
 											<div class="testimonial-author">
-												<img src="img/clients/client-1.jpg" class="img-fluid rounded-circle" alt="">
+												<img src="img/pr1.png" class="img-fluid rounded-circle" alt="">
 											</div>
 											<blockquote>
 												<p class="mb-0">“Great vibe, excellent boards and instructors. I loved the skate spot sessions and the local food nights. Friendly staff and clean rooms — would come back.”</p>
@@ -272,7 +272,7 @@
 								<div class="owl-item" style="width: 926px;"><div>
 										<div class="testimonial testimonial-style-2 testimonial-with-quotes mb-0">
 											<div class="testimonial-author">
-												<img src="img/clients/client-1.jpg" class="img-fluid rounded-circle" alt="">
+												<img src="img/pr4.png" class="img-fluid rounded-circle" alt="">
 											</div>
 											<blockquote>
 												<p class="mb-0">“Perfect mix of surf, yoga and culture. The hosts organized a couscous cooking evening that was delicious. Cozy, social, and good value.”</p>
@@ -286,7 +286,7 @@
 								<div class="owl-item" style="width: 926px;"><div>
 										<div class="testimonial testimonial-style-2 testimonial-with-quotes mb-0">
 											<div class="testimonial-author">
-												<img src="img/clients/client-1.jpg" class="img-fluid rounded-circle" alt="">
+												<img src="img/pr3.png" class="img-fluid rounded-circle" alt="">
 											</div>
 											<blockquote>
 												<p class="mb-0">“Fantastic location close to the beach, supportive surf coaches, and very welcoming atmosphere. The rooftop breakfasts are a highlight.”</p>
@@ -299,7 +299,7 @@
 									<div class="owl-item" style="width: 926px;"><div>
 										<div class="testimonial testimonial-style-2 testimonial-with-quotes mb-0">
 											<div class="testimonial-author">
-												<img src="img/clients/client-1.jpg" class="img-fluid rounded-circle" alt="">
+												<img src="img/pr6.png" class="img-fluid rounded-circle" alt="">
 											</div>
 											<blockquote>
 												<p class="mb-0">“I improved my surf and met lovely people. The skating workshop was so much fun and the traditional meals were tasty and authentic.”</p>
@@ -312,7 +312,7 @@
 									<div class="owl-item" style="width: 926px;"><div>
 										<div class="testimonial testimonial-style-2 testimonial-with-quotes mb-0">
 											<div class="testimonial-author">
-												<img src="img/clients/client-1.jpg" class="img-fluid rounded-circle" alt="">
+												<img src="img/pr2.png" class="img-fluid rounded-circle" alt="">
 											</div>
 											<blockquote>
 												<p class="mb-0">“Best hostel experience in Morocco so far — laid-back, clean, great activities program (surf, skate, yoga) and excellent local guides. A real find.”</p>
