--- a/booknow.html
+++ b/booknow.html
@@ -21,7 +21,7 @@
             background: white;
         }
         .header-bg {
-            background: linear-gradient(120deg, #6a11cb 0%, #2575fc 100%);
+            background: linear-gradient(120deg, #cb118d 0%, #fc256d 100%);
             color: white;
             padding: 25px 0;
         }
@@ -34,10 +34,10 @@
         .package-card:hover {
             transform: translateY(-5px);
             box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
-            border-color: #6a11cb;
+            border-color: #cb1140;
         }
         .package-card.selected {
-            border-color: #6a11cb;
+            border-color: #cb1139;
             background-color: #f0f4ff;
         }
         .extra-option {
@@ -53,16 +53,16 @@
         .price-tag {
             font-size: 1.2rem;
             font-weight: 700;
-            color: #6a11cb;
+            color: #cb1130;
         }
         .btn-primary {
-            background: linear-gradient(120deg, #6a11cb 0%, #2575fc 100%);
+            background: linear-gradient(120deg, #cb115f 0%, #2575fc 100%);
             border: none;
             padding: 10px 25px;
             font-weight: 600;
         }
         .btn-primary:hover {
-            background: linear-gradient(120deg, #5a0db9 0%, #1a68e8 100%);
+            background: linear-gradient(120deg, #b90d38 0%, #1a68e8 100%);
         }
         .guest-counter {
             display: inline-flex;
@@ -100,7 +100,7 @@
             top: 20px;
         }
         .invoice-header {
-            background: linear-gradient(120deg, #6a11cb 0%, #2575fc 100%);
+            background: linear-gradient(120deg, #cb1168 0%, #fc255b 100%);
             color: white;
             padding: 20px;
             border-top-left-radius: 15px;
@@ -120,7 +120,7 @@
             font-size: 1.2rem;
             margin-top: 15px;
             padding-top: 15px;
-            border-top: 2px solid #6a11cb;
+            border-top: 2px solid #cb1149;
         }
         .no-selection {
             text-align: center;
@@ -130,7 +130,7 @@
         }
         .package-name {
             font-weight: 600;
-            color: #6a11cb;
+            color: #cb112a;
         }
         .extra-name {
             color: #495057;
@@ -346,8 +346,8 @@
         </div>
         
         <div class="footer">
-            <p class="mb-0">ELSTAR Hostel • Marrakech, Morocco</p>
-            <p class="mb-0">+212 524 123 456 • info@elstar-hostel.com</p>
+            <p class="mb-0">ELSTAR Hostel • Aourir, Morocco</p>
+            <p class="mb-0">+212 774 476 707 • info@elstar.ma</p>
         </div>
     </div>
 
