--- a/booknow.html
+++ b/booknow.html
@@ -172,8 +172,8 @@
 <body>
     <div class="container py-4">
         <div class="header-bg text-center mb-4">
-            <h1 class="display-5 fw-bold logo-text">ELSTAR</h1>
-            <p class="lead">Book your desert adventure</p>
+            <h1 class="display-5 fw-bold logo-text">ELSTAR HOSTEL</h1>
+            <p class="lead">Book your adventure</p>
         </div>
 
         <div class="row">
