--- a/thehouse.html
+++ b/thehouse.html
@@ -99,7 +99,7 @@
 
 			<div role="main" class="main">
 
-				<section class="section section-with-shape-divider section-parallax bg-tertiary border-0 m-0" data-plugin-parallax data-plugin-options="{'speed': 1.5, 'parallaxHeight': '110%', 'fadeIn': true}" data-image-src="img/thehouse.jpg">
+				<section class="section section-with-shape-divider section-parallax bg-tertiary border-0 m-0" data-plugin-parallax data-plugin-options="{'speed': 1.5, 'parallaxHeight': '110%', 'fadeIn': true}" data-image-src="img/bg/3.png">
 					<div class="shape-divider shape-divider-bottom" style="height: 576px;">
 						<svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 1920 576" preserveAspectRatio="xMinYMin">
 							<path class="custom-svg-fill-color-tertiary" d="M-12,66c13.35,40.03,28.35,72.62,41,97c12.78,24.63,30.56,58.44,62,97c19.57,24,36.66,40.31,49,52
@@ -166,13 +166,7 @@
 									<span class="thumb-info thumb-info-swap-content thumb-info-centered-icons thumb-info-wrapper-direction-aware">
 										<span class="thumb-info-wrapper">
 											<img src="img/t1.jpg" class="img-fluid" alt="">
-											<span class="thumb-info-wrapper-overlay" style="left: 0px; top: 100%; transition: 300ms;">
-												<span class="thumb-info-action">
-													<a href="#">
-														<span class="thumb-info-action-icon thumb-info-action-icon-light"><i class="fas fa-play-circle text-dark text-dark"></i></span>
-													</a>
-												</span>
-											</span>
+
 										</span>
 									</span>
 
@@ -182,13 +176,7 @@
 									<span class="thumb-info thumb-info-swap-content thumb-info-centered-icons thumb-info-wrapper-direction-aware">
 										<span class="thumb-info-wrapper">
 											<img src="img/t2.jpg" class="img-fluid" alt="">
-											<span class="thumb-info-wrapper-overlay" style="left: -100%; top: 0px; transition: 300ms;">
-												<span class="thumb-info-action">
-													<a href="#">
-														<span class="thumb-info-action-icon thumb-info-action-icon-light"><i class="fas fa-play-circle text-dark text-dark"></i></span>
-													</a>
-												</span>
-											</span>
+
 										</span>
 									</span>
 
@@ -198,13 +186,7 @@
 									<span class="thumb-info thumb-info-swap-content thumb-info-centered-icons thumb-info-wrapper-direction-aware">
 										<span class="thumb-info-wrapper">
 											<img src="img/t3.jpg" class="img-fluid" alt="">
-											<span class="thumb-info-wrapper-overlay" style="left: 0px; top: 100%; transition: 300ms;">
-												<span class="thumb-info-action">
-													<a href="#">
-														<span class="thumb-info-action-icon thumb-info-action-icon-light"><i class="fas fa-play-circle text-dark text-dark"></i></span>
-													</a>
-												</span>
-											</span>
+
 										</span>
 									</span>
 
@@ -218,13 +200,7 @@
 									<span class="thumb-info thumb-info-swap-content thumb-info-centered-icons thumb-info-wrapper-direction-aware">
 										<span class="thumb-info-wrapper">
 											<img src="img/t4.jpg" class="img-fluid" alt="">
-											<span class="thumb-info-wrapper-overlay" style="left: -100%; top: 0px; transition: 300ms;">
-												<span class="thumb-info-action">
-													<a href="#">
-														<span class="thumb-info-action-icon thumb-info-action-icon-light"><i class="fas fa-play-circle text-dark text-dark"></i></span>
-													</a>
-												</span>
-											</span>
+
 										</span>
 									</span>
 
@@ -234,13 +210,7 @@
 									<span class="thumb-info thumb-info-swap-content thumb-info-centered-icons thumb-info-wrapper-direction-aware">
 										<span class="thumb-info-wrapper">
 											<img src="img/t5.jpg" class="img-fluid" alt="">
-											<span class="thumb-info-wrapper-overlay" style="left: 0px; top: -100%; transition: 300ms;">
-												<span class="thumb-info-action">
-													<a href="#">
-														<span class="thumb-info-action-icon thumb-info-action-icon-light"><i class="fas fa-play-circle text-dark text-dark"></i></span>
-													</a>
-												</span>
-											</span>
+
 										</span>
 									</span>
 
@@ -250,13 +220,7 @@
 									<span class="thumb-info thumb-info-swap-content thumb-info-centered-icons thumb-info-wrapper-direction-aware">
 										<span class="thumb-info-wrapper">
 											<img src="img/t6.jpg" class="img-fluid" alt="">
-											<span class="thumb-info-wrapper-overlay" style="left: -100%; top: 0px; transition: 300ms;">
-												<span class="thumb-info-action">
-													<a href="#">
-														<span class="thumb-info-action-icon thumb-info-action-icon-light"><i class="fas fa-play-circle text-dark text-dark"></i></span>
-													</a>
-												</span>
-											</span>
+
 										</span>
 									</span>
 
@@ -270,13 +234,7 @@
 									<span class="thumb-info thumb-info-swap-content thumb-info-centered-icons thumb-info-wrapper-direction-aware">
 										<span class="thumb-info-wrapper">
 											<img src="img/t7.jpg" class="img-fluid" alt="">
-											<span class="thumb-info-wrapper-overlay" style="left: -100%; top: 0px; transition: 300ms;">
-												<span class="thumb-info-action">
-													<a href="#">
-														<span class="thumb-info-action-icon thumb-info-action-icon-light"><i class="fas fa-play-circle text-dark text-dark"></i></span>
-													</a>
-												</span>
-											</span>
+
 										</span>
 									</span>
 
@@ -286,13 +244,7 @@
 									<span class="thumb-info thumb-info-swap-content thumb-info-centered-icons thumb-info-wrapper-direction-aware">
 										<span class="thumb-info-wrapper">
 											<img src="img/t8.jpg" class="img-fluid" alt="">
-											<span class="thumb-info-wrapper-overlay" style="left: 0px; top: -100%; transition: 300ms;">
-												<span class="thumb-info-action">
-													<a href="#">
-														<span class="thumb-info-action-icon thumb-info-action-icon-light"><i class="fas fa-play-circle text-dark text-dark"></i></span>
-													</a>
-												</span>
-											</span>
+
 										</span>
 									</span>
 
@@ -302,13 +254,7 @@
 									<span class="thumb-info thumb-info-swap-content thumb-info-centered-icons thumb-info-wrapper-direction-aware">
 										<span class="thumb-info-wrapper">
 											<img src="img/t9.jpg" class="img-fluid" alt="">
-											<span class="thumb-info-wrapper-overlay" style="left: -100%; top: 0px; transition: 300ms;">
-												<span class="thumb-info-action">
-													<a href="#">
-														<span class="thumb-info-action-icon thumb-info-action-icon-light"><i class="fas fa-play-circle text-dark text-dark"></i></span>
-													</a>
-												</span>
-											</span>
+
 										</span>
 									</span>
 
@@ -322,13 +268,7 @@
 									<span class="thumb-info thumb-info-swap-content thumb-info-centered-icons thumb-info-wrapper-direction-aware">
 										<span class="thumb-info-wrapper">
 											<img src="img/t10.jpg" class="img-fluid" alt="">
-											<span class="thumb-info-wrapper-overlay" style="left: -100%; top: 0px; transition: 300ms;">
-												<span class="thumb-info-action">
-													<a href="#">
-														<span class="thumb-info-action-icon thumb-info-action-icon-light"><i class="fas fa-play-circle text-dark text-dark"></i></span>
-													</a>
-												</span>
-											</span>
+
 										</span>
 									</span>
 
@@ -338,13 +278,7 @@
 									<span class="thumb-info thumb-info-swap-content thumb-info-centered-icons thumb-info-wrapper-direction-aware">
 										<span class="thumb-info-wrapper">
 											<img src="img/t11.jpg" class="img-fluid" alt="">
-											<span class="thumb-info-wrapper-overlay" style="left: 0px; top: -100%; transition: 300ms;">
-												<span class="thumb-info-action">
-													<a href="#">
-														<span class="thumb-info-action-icon thumb-info-action-icon-light"><i class="fas fa-play-circle text-dark text-dark"></i></span>
-													</a>
-												</span>
-											</span>
+
 										</span>
 									</span>
 
@@ -354,13 +288,7 @@
 									<span class="thumb-info thumb-info-swap-content thumb-info-centered-icons thumb-info-wrapper-direction-aware">
 										<span class="thumb-info-wrapper">
 											<img src="img/t12.jpg" class="img-fluid" alt="">
-											<span class="thumb-info-wrapper-overlay" style="left: -100%; top: 0px; transition: 300ms;">
-												<span class="thumb-info-action">
-													<a href="#">
-														<span class="thumb-info-action-icon thumb-info-action-icon-light"><i class="fas fa-play-circle text-dark text-dark"></i></span>
-													</a>
-												</span>
-											</span>
+
 										</span>
 									</span>
 
@@ -375,13 +303,7 @@
 									<span class="thumb-info thumb-info-swap-content thumb-info-centered-icons thumb-info-wrapper-direction-aware">
 										<span class="thumb-info-wrapper">
 											<img src="img/t13.jpg" class="img-fluid" alt="">
-											<span class="thumb-info-wrapper-overlay" style="left: -100%; top: 0px; transition: 300ms;">
-												<span class="thumb-info-action">
-													<a href="#">
-														<span class="thumb-info-action-icon thumb-info-action-icon-light"><i class="fas fa-play-circle text-dark text-dark"></i></span>
-													</a>
-												</span>
-											</span>
+
 										</span>
 									</span>
 
@@ -391,13 +313,7 @@
 									<span class="thumb-info thumb-info-swap-content thumb-info-centered-icons thumb-info-wrapper-direction-aware">
 										<span class="thumb-info-wrapper">
 											<img src="img/t14.jpg" class="img-fluid" alt="">
-											<span class="thumb-info-wrapper-overlay" style="left: 0px; top: -100%; transition: 300ms;">
-												<span class="thumb-info-action">
-													<a href="#">
-														<span class="thumb-info-action-icon thumb-info-action-icon-light"><i class="fas fa-play-circle text-dark text-dark"></i></span>
-													</a>
-												</span>
-											</span>
+
 										</span>
 									</span>
 
@@ -407,13 +323,7 @@
 									<span class="thumb-info thumb-info-swap-content thumb-info-centered-icons thumb-info-wrapper-direction-aware">
 										<span class="thumb-info-wrapper">
 											<img src="img/t15.jpg" class="img-fluid" alt="">
-											<span class="thumb-info-wrapper-overlay" style="left: -100%; top: 0px; transition: 300ms;">
-												<span class="thumb-info-action">
-													<a href="#">
-														<span class="thumb-info-action-icon thumb-info-action-icon-light"><i class="fas fa-play-circle text-dark text-dark"></i></span>
-													</a>
-												</span>
-											</span>
+
 										</span>
 									</span>
 
@@ -428,13 +338,7 @@
 									<span class="thumb-info thumb-info-swap-content thumb-info-centered-icons thumb-info-wrapper-direction-aware">
 										<span class="thumb-info-wrapper">
 											<img src="img/t16.jpg" class="img-fluid" alt="">
-											<span class="thumb-info-wrapper-overlay" style="left: -100%; top: 0px; transition: 300ms;">
-												<span class="thumb-info-action">
-													<a href="#">
-														<span class="thumb-info-action-icon thumb-info-action-icon-light"><i class="fas fa-play-circle text-dark text-dark"></i></span>
-													</a>
-												</span>
-											</span>
+
 										</span>
 									</span>
 
@@ -444,13 +348,7 @@
 									<span class="thumb-info thumb-info-swap-content thumb-info-centered-icons thumb-info-wrapper-direction-aware">
 										<span class="thumb-info-wrapper">
 											<img src="img/t17.jpg" class="img-fluid" alt="">
-											<span class="thumb-info-wrapper-overlay" style="left: 0px; top: -100%; transition: 300ms;">
-												<span class="thumb-info-action">
-													<a href="#">
-														<span class="thumb-info-action-icon thumb-info-action-icon-light"><i class="fas fa-play-circle text-dark text-dark"></i></span>
-													</a>
-												</span>
-											</span>
+
 										</span>
 									</span>
 
@@ -460,13 +358,7 @@
 									<span class="thumb-info thumb-info-swap-content thumb-info-centered-icons thumb-info-wrapper-direction-aware">
 										<span class="thumb-info-wrapper">
 											<img src="img/t18.jpg" class="img-fluid" alt="">
-											<span class="thumb-info-wrapper-overlay" style="left: -100%; top: 0px; transition: 300ms;">
-												<span class="thumb-info-action">
-													<a href="#">
-														<span class="thumb-info-action-icon thumb-info-action-icon-light"><i class="fas fa-play-circle text-dark text-dark"></i></span>
-													</a>
-												</span>
-											</span>
+
 										</span>
 									</span>
 
@@ -482,13 +374,7 @@
 									<span class="thumb-info thumb-info-swap-content thumb-info-centered-icons thumb-info-wrapper-direction-aware">
 										<span class="thumb-info-wrapper">
 											<img src="img/t19.jpg" class="img-fluid" alt="">
-											<span class="thumb-info-wrapper-overlay" style="left: -100%; top: 0px; transition: 300ms;">
-												<span class="thumb-info-action">
-													<a href="#">
-														<span class="thumb-info-action-icon thumb-info-action-icon-light"><i class="fas fa-play-circle text-dark text-dark"></i></span>
-													</a>
-												</span>
-											</span>
+
 										</span>
 									</span>
 
@@ -498,13 +384,7 @@
 									<span class="thumb-info thumb-info-swap-content thumb-info-centered-icons thumb-info-wrapper-direction-aware">
 										<span class="thumb-info-wrapper">
 											<img src="img/t20.jpg" class="img-fluid" alt="">
-											<span class="thumb-info-wrapper-overlay" style="left: 0px; top: -100%; transition: 300ms;">
-												<span class="thumb-info-action">
-													<a href="#">
-														<span class="thumb-info-action-icon thumb-info-action-icon-light"><i class="fas fa-play-circle text-dark text-dark"></i></span>
-													</a>
-												</span>
-											</span>
+
 										</span>
 									</span>
 
@@ -514,13 +394,7 @@
 									<span class="thumb-info thumb-info-swap-content thumb-info-centered-icons thumb-info-wrapper-direction-aware">
 										<span class="thumb-info-wrapper">
 											<img src="img/t21.jpg" class="img-fluid" alt="">
-											<span class="thumb-info-wrapper-overlay" style="left: -100%; top: 0px; transition: 300ms;">
-												<span class="thumb-info-action">
-													<a href="#">
-														<span class="thumb-info-action-icon thumb-info-action-icon-light"><i class="fas fa-play-circle text-dark text-dark"></i></span>
-													</a>
-												</span>
-											</span>
+
 										</span>
 									</span>
 
